Adding multirow package for multirow tables

--- a/text/tex/OpticalLocalization_BednarikJan.tex
+++ b/text/tex/OpticalLocalization_BednarikJan.tex
@@ -67,6 +67,9 @@
 %% Algorithms
 \usepackage[ruled, vlined, linesnumbered, nofillcomment]{algorithm2e}
 
+% Tables
+\usepackage{multirow}
+
 %%%% Custom commands
 % particle
 \newcommand{\particle}[2]{(\vec{x_{#1}^{#2}},w_{#1}^{#2})}
